Fix header shrinking down to smaller size than rest of page; fix text on first and last name label; fix keep label text from wrapping

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -100,7 +100,7 @@ button {
     grid-column: 1 / 7;
     grid-row: 1 / 3;
     padding: 20px 205px 68px;
-    /* min-width: 100vw; */
+    min-width: 150px;
     /* min-height: 90px; */
     background: url("images/background-image@2x.png") no-repeat;
 
@@ -335,6 +335,7 @@ button {
     display: block;
     padding: 30px 0 10px;
     font-weight: 500;
+    white-space: nowrap;
 }
 
 .country-zip-section {
